Some re-arrangement and remove icon from hw button settings
Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/xml/fusion_navigation_settings.xml
+++ b/res/xml/fusion_navigation_settings.xml
@@ -59,8 +59,7 @@
             android:id="@+id/button_settings"
             android:title="@string/button_pref_title"
             android:fragment="com.android.settings.ButtonSettings"
-            android:dependency="hardware_keys_disable"
-            android:icon="@drawable/ic_settings_home" />
+            android:dependency="hardware_keys_disable" />
 
     </PreferenceCategory>
 
