--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -11,6 +11,11 @@
                 android:fragment="com.android.settings.fusion.StatusBarClockStyle"
                 android:title="@string/status_bar_clock" />
 
+        <SwitchPreference
+                android:key="status_bar_show_battery_percent"
+                android:summary="@string/status_bar_show_battery_percent_summary"
+                android:title="@string/status_bar_show_battery_percent_title" />
+
         <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
                 android:key="status_bar_brightness_control"
                 android:title="@string/status_bar_toggle_brightness"
