--- a/res/xml/fusion_sound_settings.xml
+++ b/res/xml/fusion_sound_settings.xml
@@ -19,10 +19,20 @@
     android:title="@string/sound_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <PreferenceCategory
+        android:title="@string/general_sound_category_title" />
+
     <SwitchPreference
         android:key="camera_sounds"
         android:title="@string/camera_sounds_title"
         android:summary="@string/camera_sounds_summary"
+        android:defaultValue="true" />
+
+    <!-- Screenshot tone -->
+    <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+        android:key="screenshot_sound"
+        android:title="@string/screenshot_sound_title"
+        android:summary="@string/screenshot_sound_summary"
         android:defaultValue="true" />
 
     <SwitchPreference
