MediaScanner behavior on boot (3/3)
Lets you enable/disable/ask (with a notification) media scanning on boot.
Can speed up boot and reduce initial boot lag from MediaScanner

Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/xml/fusion_advanced_settings.xml
+++ b/res/xml/fusion_advanced_settings.xml
@@ -29,6 +29,13 @@
             android:targetClass="com.cyanogenmod.settings.device.DeviceSettings" />
     </PreferenceScreen>
 
+    <ListPreference
+        android:key="media_scanner_on_boot"
+        android:title="@string/media_scanner_on_boot_title"
+        android:persistent="false"
+        android:entries="@array/media_scanner_on_boot_entries"
+        android:entryValues="@array/media_scanner_on_boot_values" />
+
     <Preference
         android:id="@+id/kernel_tweaker"
         android:title="@string/kernel_tweaker_title"
