Option to enable/disable HOME button wake (2/2)
Intercept Home button press to wake device

Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -566,4 +566,8 @@
     <string name="select_custom_app_title">Select custom application</string>
     <string name="select_custom_activity_title">Select custom activity</string>
 
+    <!-- HOME button wake -->
+    <string name="button_wake_title">Wake up</string>
+    <string name="home_wake_summary">Pressing the home button will wake your device</string>
+
 </resources>
