--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -22,11 +22,10 @@
                 android:summary="@string/status_bar_toggle_brightness_summary"
                 android:defaultValue="false" />
 
-        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
-                android:key="status_bar_quick_qs_pulldown"
-                android:title="@string/status_bar_quick_qs_pulldown_title"
-                android:summary="@string/status_bar_quick_qs_pulldown_summary"
-                android:defaultValue="true" />
+        <PreferenceScreen
+                android:key="quick_settings"
+                android:fragment="com.android.settings.fusion.QsSettings"
+                android:title="@string/qs_title" />
 
         <PreferenceScreen
                 android:key="network_traffic_state"
