Add System app remover
Thanks to slimroms for the base code.

modified for kitkat and lollipop.

This commit also contains:
Consistence..change more from CheckBoxPreference to SwitchPreference
See NetworkTraffic and Hosts File Manager.

Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/xml/fusion_advanced_settings.xml
+++ b/res/xml/fusion_advanced_settings.xml
@@ -47,6 +47,11 @@
     </Preference>
 
     <PreferenceScreen
+        android:id="@+id/system_app_remover"
+        android:title="@string/sizer_title"
+        android:fragment="com.android.settings.fusion.SystemappRemover" />
+
+    <PreferenceScreen
         android:key="hfm_settings"
         android:title="@string/hfm_pref_screen_title"
         android:fragment="com.android.settings.fusion.hfm.HfmSettings" />
