Move PrivacyGuard to Fusion
Also add categories to Main Fusion settings

Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -22,6 +22,7 @@
     <string name="enabled">Enabled</string>
     <string name="disabled">Disabled</string>
     <string name="default_string">Default</string>
+    <string name="more_string">More</string>
 
     <!-- Color Picker -->
     <string name="dialog_color_picker">Color Picker</string>
@@ -37,6 +38,7 @@
     <string name="fusion_settings_title">Fusion</string>
     <string name="display_category_fusion_options_title">Fusion Options</string>
     <string name="category_general_title">General Options</string>
+    <string name="category_more_title">More Options</string>
     <string name="statusbar_settings_title">Status bar</string>
     <string name="equalizer_settings_title">Equalizer</string>
 
