--- a/res/xml/security_settings_app_fusion.xml
+++ b/res/xml/security_settings_app_fusion.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) SlimRoms Project
+<!-- Copyright (C) 2014 The Fusion Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -22,7 +22,7 @@
         android:title="@string/app_security_title">
 
          <Preference
-            android:fragment="com.android.settings.slim.privacyguard.PrivacyGuardManager"
+            android:fragment="com.android.settings.fusion.privacyguard.PrivacyGuardManager"
             android:key="privacy_guard_manager"
             android:summary="@string/privacy_guard_manager_summary"
             android:title="@string/privacy_guard_manager_title" />
