display: Make advanced settings a category
This was a separate screen but it's too empty for that, let's make
it a category like in CM11 for now. If it ever becomes a separate
screen it needs its own fragment so that navigation is possible
via actionbar.

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -113,8 +113,9 @@
                 settings:keywords="@string/keywords_display_cast_screen"
                 android:fragment="com.android.settings.wfd.WifiDisplaySettings" />
 
+        </PreferenceCategory>
 
-        <PreferenceScreen
+        <PreferenceCategory
                 android:key="advanced_display_prefs"
                 android:title="@string/advanced_settings">
 
@@ -133,8 +134,6 @@
                     android:title="@string/double_tap_to_sleep_title"
                     android:summary="@string/double_tap_to_sleep_summary"
                     android:defaultValue="true" />
-        </PreferenceScreen>
-
         </PreferenceCategory>
 
          <PreferenceCategory
