--- a/res/xml/fusion_privacy_settings.xml
+++ b/res/xml/fusion_privacy_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2012 The CyanogenMod Project
+<!-- Copyright (C) 2014 The Fusion Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -21,13 +21,26 @@
         android:key="app_security"
         android:title="@string/app_security_title">
 
-        <PreferenceScreen
+         <Preference
+            android:fragment="com.android.settings.fusion.privacyguard.PrivacyGuardManager"
+            android:key="privacy_guard_manager"
+            android:summary="@string/privacy_guard_manager_summary"
+            android:title="@string/privacy_guard_manager_title" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/phone_security_title">
+
+         <PreferenceScreen
             android:key="blacklist"
             android:title="@string/blacklist_title"
+            android:summary="@string/blacklist_summary"
             android:fragment="com.android.settings.blacklist.BlacklistSettings" />
 
-        <PreferenceScreen
+         <PreferenceScreen
             android:title="@string/block_notifications_title"
+            android:summary="@string/block_notifications_summary"
             android:fragment="com.android.settings.cyanogenmod.SpamList" />
 
     </PreferenceCategory>
