Answer call with hardware HOME button (1/2)
Squashed commit of the following:

PS1
Adds ability to answer call with hardware HOME button
preparation to winter time

PS2
Settings: Move home answer & power end call options

PS3
Move 'Home answers call' & 'Power ends call' options to button settings

Thanks cm

Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -133,7 +133,9 @@
     <string name="toggleWimax">WiMAX</string>
     <string name="toggleNfc">NFC</string>
 
+    <!-- Hardware keys -->
     <string name="button_pref_title">Buttons</string>
+    <string name="hardware_keys_power_key_title">Power button</string>
     <string name="hardware_keys_home_key_title">Home button</string>
     <string name="hardware_keys_menu_key_title">Menu button</string>
     <string name="hardware_keys_short_press_title">Short press action</string>
@@ -149,7 +151,6 @@
     <string name="hardware_keys_action_sleep">Turn screen off</string>
 
     <string name="show_battery_percent_title">Show battery percentage</string>
-    <string name="app_security_title">App security</string>
 
     <!-- Blacklist preferences -->
     <string name="blacklist_title">Blacklist</string>
