--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -571,6 +571,14 @@
     <string name="button_wake_title">Wake up</string>
     <string name="home_wake_summary">Pressing the home button will wake your device</string>
 
+    <!-- HOME answer call -->
+    <string name="home_answer_call_title">Answer call</string>
+    <string name="home_answer_call_summary">Pressing the home button will answer the current incoming call</string>
+
+    <!-- HOME end call -->
+    <string name="power_end_call_title">End call</string>
+    <string name="power_end_call_summary">Pressing the power button will end the current call</string>
+
     <!-- QuickSettings: Quick Pulldown -->
     <string name="qs_title">Quick settings</string>
     <string name="title_quick_pulldown">Quick pulldown</string>
