--- a/res/xml/fusion_navigation_settings.xml
+++ b/res/xml/fusion_navigation_settings.xml
@@ -18,24 +18,20 @@
     android:title="@string/navigation_pref_title">
 
     <PreferenceCategory
-        android:key="navigation_bar_simulate"
-        android:title="@string/navigation_bar_simulate_category">
+        android:key="navigation_bar_settings"
+        android:title="@string/navbar_settings_category">
 
-        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
-            android:key="navbar_force_enable"
-            android:title="@string/navbar_force_enable_title"
-            android:summary="@string/navbar_force_enable_summary"
-            android:defaultValue="false" />
+    <SwitchPreference
+        android:key="enable_nav_bar"
+        android:title="@string/navbar_enable_bar_title"
+        android:summary="@string/navbar_enable_bar_summary"
+        android:defaultValue="false" />
 
-        <ListPreference
-            android:key="navigation_bar_height"
-            android:dialogTitle="@string/navigation_bar_height"
-            android:title="@string/navigation_bar_height"
-            android:entries="@array/navigation_bar_height_entries"
-            android:entryValues="@array/navigation_bar_height_values"
-            android:defaultValue="48"
-            android:dependency="navbar_force_enable"
-            android:persistent="false" />
+    <PreferenceScreen
+        android:key="navbar_dimensions"
+        android:fragment="com.android.settings.fusion.NavBarDimensions"
+        android:title="@string/navbar_style_dimen_title"
+        android:dependency="enable_nav_bar" />
 
     </PreferenceCategory>
 
