--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -32,6 +32,12 @@
                 android:fragment="com.android.settings.fusion.NetworkTraffic"
                 android:summary="@string/network_traffic_summary"
                 android:title="@string/network_traffic_title" />
+
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+                android:key="status_bar_notif_count"
+                android:title="@string/status_bar_notif_count_title"
+                android:summary="@string/status_bar_notif_count_summary"
+                android:defaultValue="false" />
     </PreferenceCategory>
 
 </PreferenceScreen>
