--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -33,6 +33,12 @@
                 android:summary="@string/network_traffic_summary"
                 android:title="@string/network_traffic_title" />
 
+        <SwitchPreference
+                android:key="status_bar_ticker_enabled"
+                android:title="@string/status_bar_ticker_title"
+                android:summary="@string/status_bar_ticker_summary"
+                android:defaultValue="true" />
+
         <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
                 android:key="status_bar_notif_count"
                 android:title="@string/status_bar_notif_count_title"
