--- a/res/xml/qs_settings.xml
+++ b/res/xml/qs_settings.xml
@@ -17,14 +17,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-        <ListPreference
+        <com.android.settings.fusion.SystemSettingListPreference
             android:key="quick_pulldown"
             android:title="@string/title_quick_pulldown"
             android:entries="@array/quick_pulldown_entries"
             android:entryValues="@array/quick_pulldown_values"
             android:persistent="false" />
 
-        <ListPreference
+        <com.android.settings.fusion.SystemSettingListPreference
             android:key="smart_pulldown"
             android:title="@string/smart_pulldown_title"
             android:entries="@array/smart_pulldown_entries"
