--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -23,6 +23,7 @@
     <string name="disabled">Disabled</string>
     <string name="default_string">Default</string>
     <string name="more_string">More</string>
+    <string name="help">Help</string>
     <string name="reset_message">Reset all entries to default?</string>
 
     <!-- Color Picker -->
