--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -383,4 +383,7 @@
 
     <string name="auto_brightness_reset_button">Reset</string>
 
+    <string name="stats_collection_title">Stats collection</string>
+    <string name="stats_collection_summary">When enabled, allows metrics collection.</string>
+
 </resources>
