--- a/res/xml/fusion_privacy_settings.xml
+++ b/res/xml/fusion_privacy_settings.xml
@@ -43,6 +43,11 @@
             android:summary="@string/block_notifications_summary"
             android:fragment="com.android.settings.cyanogenmod.SpamList" />
 
-    </PreferenceCategory>
+         <com.android.settings.cyanogenmod.SecureSettingSwitchPreference
+            android:key="stats_collection"
+            android:title="@string/stats_collection_title"
+            android:summary="@string/stats_collection_summary"
+            android:defaultValue="true" />
 
+    </PreferenceCategory>
 </PreferenceScreen>
