--- a/res/xml/fusion_advanced_settings.xml
+++ b/res/xml/fusion_advanced_settings.xml
@@ -56,4 +56,9 @@
         android:title="@string/hfm_pref_screen_title"
         android:fragment="com.android.settings.fusion.hfm.HfmSettings" />
 
+    <PreferenceScreen
+        android:id="@+id/wakelock_blocker"
+        android:title="@string/wakelock_blocker"
+        android:fragment="com.android.settings.fusion.WakeLockBlocker" />
+
 </PreferenceScreen>
