--- a/res/values/fusion_colors.xml
+++ b/res/values/fusion_colors.xml
@@ -19,4 +19,7 @@
     <!-- Gesture anywhere -->
     <color name="ga_gesture_color">@android:color/black</color>
 
+    <!-- Gesture panel -->
+    <color name="gesture_color">#c0ffffff</color>
+
 </resources>
