--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -362,7 +362,7 @@
             android:key="debug_LAN_category"
             android:title="@string/debug_LAN_category">
 
-        <com.android.settings.slim.HostnamePreference
+        <com.android.settings.fusion.HostnamePreference
             android:key="device_hostname"
             android:title="@string/device_hostname"
             android:dialogTitle="@string/device_hostname"
