--- a/res/xml/fusion_advanced_settings.xml
+++ b/res/xml/fusion_advanced_settings.xml
@@ -36,6 +36,14 @@
         android:entries="@array/media_scanner_on_boot_entries"
         android:entryValues="@array/media_scanner_on_boot_values" />
 
+    <ListPreference
+        android:key="pref_scrollingcache"
+        android:dialogTitle="@string/pref_scrollingcache_title"
+        android:title="@string/pref_scrollingcache_title"
+        android:summary="@string/pref_scrollingcache_summary"
+        android:entries="@array/entries_scrollingcache"
+        android:entryValues="@array/values_scrollingcache" />
+
     <Preference
         android:id="@+id/kernel_tweaker"
         android:title="@string/kernel_tweaker_title"
