[2/2] Settings: allow disabling volume adjust sound
Change-Id: Ie0547b79d191674ab9d84a0e6a08b1ca29b8bcd9

--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -952,4 +952,7 @@
     <string name="listview_anticipate_overshoot_interpolator">Anticipate and overshoot</string>
     <string name="listview_bounce_interpolator">Bounce</string>
 
+    <!-- Disable volume adjust sound -->
+    <string name="volume_adjust_sound_title">Volume adjust sound</string>
+
 </resources>
