Settings - Wifi notifications: notify when wifi connects [2/2]
Options:
off (default)
a dry white toast
a notification
a notification with a sound

For those of us that survive on wifi islands in small college towns this
is
pretty nice to have

Any notification within 30 seconds of broadcast intent
ACTION_BOOT_COMPLETED
will be canceled to prevent startup notification spamming. 8 (default)
of the
previous connections are remembered and it will update the
notification's content
accordingly if you've restored a connection.

PS2: clean up strings
PS3: fix build & fix list preference not being updated

Change-Id: I18448773c64a6a0d65e7c39d008de2b371f4d556
Signed-off-by: STELIX <ssspinni@gmail.com>

--- a/res/values/cm_arrays.xml
+++ b/res/values/cm_arrays.xml
@@ -229,4 +229,26 @@ limitations under the License.
          per-device overlay. Required to build on non-hardware tunable devices -->
     <string-array name="gamma_descriptors" translatable="false">
     </string-array>
+
+    <!-- Wifi connection notifications -->
+    <string-array name="notify_changed_networks_entries" translatable="false">
+        <item>@string/notify_changed_networks_default</item>
+        <item>@string/notify_changed_networks_toast</item>
+        <item>@string/notify_changed_networks_notification</item>
+        <item>@string/notify_changed_networks_notification_sound</item>
+    </string-array>
+
+    <string-array name="notify_changed_networks_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <!-- Wifi connection notifications -->
+    <string name="wifi_notify_changed_networks">Wi\u2011Fi connected notification</string>
+    <string name="notify_changed_networks_default">Off (default)</string>
+    <string name="notify_changed_networks_toast">Toast</string>
+    <string name="notify_changed_networks_notification">Notification</string>
+    <string name="notify_changed_networks_notification_sound">Notification with sound</string>
 </resources>
