Battery text mode (2/2) PS5: More configuration PS7: Rebased and changed topic
Change-Id: I13bdf2236811f535b0ac324b5b78c0ab12f365a6
Signed-off-by: kecinzer <kecinzer@gmail.com>

PS
Remove old code. See ce67c6cb72d145c6f9fbf92154755a7771d44fe0

Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -386,4 +386,11 @@
     <string name="stats_collection_title">Stats collection</string>
     <string name="stats_collection_summary">When enabled, allows metrics collection.</string>
 
+    <!-- Battery percentage -->
+    <string name="status_bar_battery_percentage_title">Show battery percentage</string>
+    <string name="status_bar_battery_percentage_dialog_title">Battery percentage</string>
+    <string name="status_bar_battery_percentage_default">Hidden (default)</string>
+    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
+    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
+
 </resources>
