--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -11,10 +11,12 @@
                 android:fragment="com.android.settings.fusion.StatusBarClockStyle"
                 android:title="@string/status_bar_clock" />
 
-        <SwitchPreference
+        <ListPreference
                 android:key="status_bar_show_battery_percent"
-                android:summary="@string/status_bar_show_battery_percent_summary"
-                android:title="@string/status_bar_show_battery_percent_title" />
+                android:title="@string/status_bar_battery_percentage_title"
+                android:dialogTitle="@string/status_bar_battery_percentage_dialog_title"
+                android:entries="@array/status_bar_battery_percentage_entries"
+                android:entryValues="@array/status_bar_battery_percentage_values" />
 
         <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
                 android:key="status_bar_brightness_control"
