--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -7,19 +7,9 @@
                 android:fragment="com.android.settings.fusion.StatusBarClockStyle"
                 android:title="@string/status_bar_clock" />
 
-        <ListPreference
-                android:key="status_bar_battery_style"
-                android:title="@string/status_bar_battery_style_title"
-                android:dialogTitle="@string/status_bar_battery_style_title"
-                android:entries="@array/status_bar_battery_style_entries"
-                android:entryValues="@array/status_bar_battery_style_values" />
-
-        <ListPreference
-                android:key="status_bar_show_battery_percent"
-                android:title="@string/status_bar_battery_percentage_title"
-                android:dialogTitle="@string/status_bar_battery_percentage_dialog_title"
-                android:entries="@array/status_bar_battery_percentage_entries"
-                android:entryValues="@array/status_bar_battery_percentage_values" />
+        <PreferenceScreen
+                android:fragment="com.android.settings.fusion.BatterySettings"
+                android:title="@string/status_bar_battery_style_cat" />
 
     <PreferenceCategory
         android:key="status_bar_general_category"
@@ -30,6 +20,12 @@
                 android:title="@string/status_bar_toggle_brightness"
                 android:summary="@string/status_bar_toggle_brightness_summary"
                 android:defaultValue="false" />
+
+        <PreferenceScreen
+                android:key="network_traffic_state"
+                android:fragment="com.android.settings.fusion.NetworkTraffic"
+                android:summary="@string/network_traffic_summary"
+                android:title="@string/network_traffic_title" />
 
         <PreferenceScreen
                 android:key="quick_settings"
@@ -54,11 +50,5 @@
                 android:summary="@string/status_bar_show_weather_summary"
                 android:defaultValue="false" />
     </PreferenceCategory>
-
-        <PreferenceScreen
-                android:key="network_traffic_state"
-                android:fragment="com.android.settings.fusion.NetworkTraffic"
-                android:summary="@string/network_traffic_summary"
-                android:title="@string/network_traffic_title" />
 
 </PreferenceScreen>
