--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -7,6 +7,13 @@
                 android:fragment="com.android.settings.fusion.StatusBarClockStyle"
                 android:title="@string/status_bar_clock" />
 
+        <ListPreference
+                android:key="status_bar_battery_style"
+                android:title="@string/status_bar_battery_style_title"
+                android:dialogTitle="@string/status_bar_battery_style_title"
+                android:entries="@array/status_bar_battery_style_entries"
+                android:entryValues="@array/status_bar_battery_style_values" />
+
         <PreferenceScreen
                 android:fragment="com.android.settings.fusion.BatterySettings"
                 android:title="@string/status_bar_battery_style_cat" />
