--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -601,9 +601,8 @@
     <string name="select_custom_app_title">Select custom application</string>
     <string name="select_custom_activity_title">Select custom activity</string>
 
-    <!-- HOME button wake -->
-    <string name="button_wake_title">Wake up</string>
-    <string name="home_wake_summary">Pressing the home button will wake your device</string>
+    <!-- Button wake -->
+    <string name="button_wake_title">Wake up device</string>
 
     <!-- HOME answer call -->
     <string name="home_answer_call_title">Answer call</string>
