--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -2,6 +2,9 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/status_bar_title" >
 
+    <PreferenceCategory
+        android:title="@string/status_bar_style_title">
+
         <PreferenceScreen
                 android:key="clock_style_pref"
                 android:fragment="com.android.settings.fusion.StatusBarClockStyle"
@@ -14,13 +17,17 @@
                 android:entries="@array/status_bar_battery_style_entries"
                 android:entryValues="@array/status_bar_battery_style_values" />
 
-        <PreferenceScreen
-                android:fragment="com.android.settings.fusion.BatterySettings"
-                android:title="@string/status_bar_battery_style_cat" />
+        <com.android.settings.fusion.SystemSettingListPreference
+                android:key="status_bar_show_battery_percent"
+                android:title="@string/status_bar_battery_percentage_title"
+                android:dialogTitle="@string/status_bar_battery_percentage_dialog_title"
+                android:entries="@array/status_bar_battery_percentage_entries"
+                android:entryValues="@array/status_bar_battery_percentage_values" />
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="status_bar_general_category"
-        android:title="@string/status_bar_title" >
+        android:title="@string/status_bar_advanced_title" >
 
         <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
                 android:key="status_bar_brightness_control"
