HardwareKeys more equivalent to cm (2/2)
Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -122,4 +122,15 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="volume_keys"
+        android:title="@string/hardware_keys_volume_keys_title" >
+
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+            android:key="volume_wake_screen"
+            android:title="@string/button_wake_title"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
