--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -91,7 +91,7 @@
         <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
             android:key="back_wake_screen"
             android:title="@string/button_wake_title"
-            android:defaultValue="true" />
+            android:defaultValue="false" />
 
     </PreferenceCategory>
 
@@ -102,7 +102,7 @@
         <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
             android:key="menu_wake_screen"
             android:title="@string/button_wake_title"
-            android:defaultValue="true" />
+            android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_menu_press"
@@ -129,7 +129,7 @@
         <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
             android:key="volume_wake_screen"
             android:title="@string/button_wake_title"
-            android:defaultValue="true" />
+            android:defaultValue="false" />
 
     </PreferenceCategory>
 
