--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -157,6 +157,8 @@
     <string name="hardware_keys_action_launch_camera">Launch camera</string>
     <string name="hardware_keys_action_sleep">Turn screen off</string>
     <string name="hardware_keys_action_last_app">Last app</string>
+    <string name="swap_volume_buttons_title">Reorient</string>
+    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
     <string name="volbtn_wake_device_title">Wake up device</string>
     <string name="volbtn_wake_device_summary">Pressing either volume button will wake your device</string>
 
