--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -131,6 +131,11 @@
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
+        <SwitchPreference
+            android:key="swap_volume_buttons"
+            android:title="@string/swap_volume_buttons_title"
+            android:summary="@string/swap_volume_buttons_summary" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
