--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -963,4 +963,9 @@
     <string name="timeout_1000">1 second</string>
     <string name="timeout_500">0,5 second</string>
 
+    <!-- MIUI-like carrier label -->
+    <string name="show_status_bar_carrier_title">MIUI-like carrier label</string>
+    <string name="show_status_bar_carrier_summary">Shows carrier label in status bar</string>
+    <string name="status_bar_carrier_color">MIUI-like carrier label Color</string>
+
 </resources>
