--- a/res/xml/fusion_sound_settings.xml
+++ b/res/xml/fusion_sound_settings.xml
@@ -49,6 +49,11 @@
         android:persistent="false"
         android:defaultValue="true" />
 
+    <PreferenceScreen
+        android:key="volume_steps_settings"
+        android:fragment="com.android.settings.fusion.VolumeSteps"
+        android:title="@string/volume_steps_title" />
+
     <PreferenceCategory
         android:title="@string/notifications_category_title" />
 
