Settings: Custom scrolling values 2/2
ported from https://gerrit.omnirom.org/#/c/4249/
originally written by Yanuar Harry <ai.the.smarties.physics@gmail.com>

PS2: make help icon not selectable and fix capitalization consistency

Change-Id: I89cac4e9c2f5a495339a8495bce11e42f49ee05e

--- a/res/xml/fusion_animations_settings.xml
+++ b/res/xml/fusion_animations_settings.xml
@@ -45,6 +45,12 @@
             android:entryValues="@array/toast_animation_values"
             android:persistent="false" />
 
+        <PreferenceScreen
+            android:key="interface_animation_scroll"
+            android:fragment="com.android.settings.fusion.ScrollAnimationInterfaceSettings"
+            android:title="@string/scrolling_title"
+            android:summary="@string/scrolling_summary" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
