--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -984,4 +984,18 @@
     <string name="volume_steps_system_title">System</string>
     <string name="volume_steps_voice_call_title">Voice Call</string>
 
+    <!-- Scrolling animations -->
+    <string name="scrolling_title">Scrolling animations</string>
+    <string name="scrolling_summary">Customize system animations for scrolling</string>
+    <string name="animation_settings_reset_message">Reset animations to default?</string>
+    <string name="animation_fling_velocity_title">Fling velocity</string>
+    <string name="animation_scroll_friction_title">Scroll friction</string>
+    <string name="animation_overscroll_distance_title">Overscroll distance</string>
+    <string name="animation_overfling_distance_title">Overfling distance</string>
+    <string name="animation_duration_summary">Set duration</string>
+    <string name="animation_no_scroll_title">Scrolling modifiers</string>
+    <string name="animation_no_scroll_summary_on">Enabled</string>
+    <string name="animation_no_scroll_summary_off">Disabled</string>
+    <string name="scroll_disclaimer_summary">Note: Most apps need to be restarted for custom values to take effect</string>
+
 </resources>
