--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -998,4 +998,23 @@
     <string name="animation_no_scroll_summary_off">Disabled</string>
     <string name="scroll_disclaimer_summary">Note: Most apps need to be restarted for custom values to take effect</string>
 
+    <!-- Animation controls -->
+    <string name="animation_controls_title">Animation controls</string>
+    <string name="animation_controls_summary">Change direction of the system animations</string>
+    <string name="activity_open_title">Activity open</string>
+    <string name="activity_close_title">Activity close</string>
+    <string name="task_open_title">Task open</string>
+    <string name="task_close_title">Task close</string>
+    <string name="task_move_to_front_title">Move to front</string>
+    <string name="task_move_to_back_title">Move to back</string>
+    <string name="wallpaper_open_title">Wallpaper open</string>
+    <string name="wallpaper_close_title">Wallpaper close</string>
+    <string name="wallpaper_intra_open_title">Wallpaper intra open</string>
+    <string name="wallpaper_intra_close_title">Wallpaper intra close</string>
+    <string name="animation_duration_title">Animation duration</string>
+    <string name="title_animation_no_override">Prevent app overrides</string>
+    <string name="summary_animation_no_override">Prevent apps from overriding transitions</string>
+    <string name="animation_duration_default">Default</string>
+    <string name="header_summary_animation" translatable="false">@null</string>
+
 </resources>
