Settings: IME animations (2/3) OmniGears: (3/3)
Destiled from here:
https://gerrit.omnirom.org/#/c/4249/32

Ported from Fusion rom KitKat

Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/xml/fusion_animations_settings.xml
+++ b/res/xml/fusion_animations_settings.xml
@@ -44,6 +44,12 @@
             android:entryValues="@array/listview_interpolator_values"
             android:defaultValue="0" />
 
+        <PreferenceScreen
+            android:key="interface_animation_scroll"
+            android:fragment="com.android.settings.fusion.KeyboardAnimationInterfaceSettings"
+            android:title="@string/ime_animation_title"
+            android:summary="@string/ime_animation_summary" />
+
         <ListPreference
             android:key="toast_animation"
             android:title="@string/toast_animation_title"
