--- a/res/values/fusion_arrays.xml
+++ b/res/values/fusion_arrays.xml
@@ -188,6 +188,8 @@
         <item>@string/toast_none_animation</item>
         <item>@string/toast_default_animation</item>
         <item>@string/toast_fade_animation</item>
+        <item>@string/toast_SlideLeftRight_animation</item>
+        <item>@string/toast_SlideRightLeft_animation</item>
         <item>@string/toast_SlideRight_animation</item>
         <item>@string/toast_SlideLeft_animation</item>
         <item>@string/toast_Xylon_animation</item>
@@ -216,6 +218,8 @@
         <item>11</item>
         <item>12</item>
         <item>13</item>
+        <item>14</item>
+        <item>15</item>
     </string-array>
 
     <string-array name="clock_style_entries" translatable="false">
