[2/2] Left handed navbar during landscape mode This patch allows for the navbar to be moved to the left side of the screen during landscape mode. Left handed people are more used to this option.
Screenshot: http://i.imgur.com/jWqJcEV.png

Contributors:

Decad3nce
CyanogenMod/android_packages_apps_Settings@a2b5ff1

romanbb
CyanogenMod/android_packages_apps_Settings@34344a5

crpalmer
CyanogenMod/android_packages_apps_Settings@6833e8c

Change-Id: Ic95e3fda1f55efd2ec908c8d7226e638ec0ab80a

--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1050,4 +1050,8 @@
     <!-- Bluetooth accept all Filestypes -->
     <string name="bluetooth_accept_all_files">Accept all file types</string>
 
+    <!-- Navigation Bar left-handed mode-->
+    <string name="navigation_bar_left_title">Left-handed mode</string>
+    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
+
 </resources>
